mdapipkg/objects/Chapter_Health__c.object
<CustomObject>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2017-2018</fullName>
                </value>
                <value>
                    <fullName>2016-2017</fullName>
                </value>
                <value>
                    <fullName>2015-2016</fullName>
                </value>
                <value>
                    <fullName>2014-2015</fullName>
                </value>
                <value>
                    <fullName>2013-2014</fullName>
                </value>
                <value>
                    <fullName>2012-2013</fullName>
                </value>
                <value>
                    <fullName>2011-2010</fullName>
                </value>
                <value>
                    <fullName>2010-2011</fullName>
                </value>
                <value>
                    <fullName>2009-2010</fullName>
                </value>
                <value>
                    <fullName>2008-2009</fullName>
                </value>
                <value>
                    <fullName>2007-2008</fullName>
                </value>
                <value>
                    <fullName>2006-2007</fullName>
                </value>
                <value>
                    <fullName>2005-2006</fullName>
                </value>
                <value>
                    <fullName>2004-2005</fullName>
                </value>
                <value>
                    <fullName>2003-2004</fullName>
                </value>
                <value>
                    <fullName>2002-2003</fullName>
                </value>
                <value>
                    <fullName>2001-2002</fullName>
                </value>
                <value>
                    <fullName>2000-2001</fullName>
                </value>
                <value>
                    <fullName>1999-2000</fullName>
                </value>
                <value>
                    <fullName>1998-1999</fullName>
                </value>
                <value>
                    <fullName>1997-1998</fullName>
                </value>
                <value>
                    <fullName>1996-1997</fullName>
                </value>
                <value>
                    <fullName>1995-1996</fullName>
                </value>
                <value>
                    <fullName>1994-1995</fullName>
                </value>
                <value>
                    <fullName>1993-1994</fullName>
                </value>
                <value>
                    <fullName>1992-1993</fullName>
                </value>
                <value>
                    <fullName>1991-1992</fullName>
                </value>
                <value>
                    <fullName>1990-1991</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Forum_Fundamentals_Vouchers_redeemed__c</fullName>
        <description>Total FF vouchers redeemed.</description>
        <label>Forum Fundamentals Vouchers redeemed</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forum_Status__c</fullName>
        <label>Forum Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Pending Placement</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fully_integrated_Y_and_W_eduprog__c</fullName>
        <label>Fully integrated Y and W edu prog</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fundamentals_Vouchers_Redeemed__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Percentage of Forum Fundamentals Vouchers redeemed (new members/spouses)  (enter zero for YPO Gold Chapters)</inlineHelpText>
        <label>% Forum Fundamentals Vouchers DEPRECATED</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GLC_or_CLW_attendance__c</fullName>
        <formula>IF(Number_Trained_Officers__c  &gt;= 1, 3, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>1 or more officers attended GLC or CLW past fiscal year = Platinum</inlineHelpText>
        <label>GLC or CLW attendance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Governance_Limit_Green__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Governance # of GLC Officer Positions Filled</description>
        <inlineHelpText># of GLC Officer Positions Filled</inlineHelpText>
        <label>Governance Limit Green</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Governance_Limit_Red__c</fullName>
        <defaultValue>40</defaultValue>
        <description>Governance # of GLC Officer Positions Filled</description>
        <inlineHelpText># of GLC Officer Positions Filled</inlineHelpText>
        <label>Governance Limit Red</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Governance_Limit_Yellow__c</fullName>
        <defaultValue>40</defaultValue>
        <description>Governance # of GLC Officer Positions Filled</description>
        <inlineHelpText># of GLC Officer Positions Filled</inlineHelpText>
        <label>Governance Limit Yellow</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Governance_Rating__c</fullName>
        <formula>IF ( Governance__c &lt;&gt; 0, IF( 
Governance_Limit_Green__c &gt; 0, 

IF( 
Governance__c &gt;= Governance_Limit_Green__c , IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;green&quot;), 
IF( Governance__c &gt;= Governance_Limit_Yellow__c , IMAGE(&quot;/img/samples/light_yellow.gif&quot;, &quot;yellow&quot;), 
IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;red&quot;))) 
, 

IF( 
Governance__c &gt;= Region2__r.Governance_Limit_Green__c , IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;green&quot;), 
IF( Governance__c &gt;= Region2__r.Governance_Limit_Yellow__c , IMAGE(&quot;/img/samples/light_yellow.gif&quot;, &quot;yellow&quot;),IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;red&quot;)))),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Governance rating based on Regional Limits</inlineHelpText>
        <label>Governance Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Governance__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Governance %</description>
        <label>Governance %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_activities__c</fullName>
        <formula>IF(TEXT(LastActivityDate) &lt;&gt; &quot;&quot;, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has activities?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Health_Score__c</fullName>
        <formula>Complete_member_profile_on_Exchange__c + 
Chapter_retention_rate__c + 
Officer_elect_identification_by_1Oct__c + 
Chapter_event_participation__c + 
Member_Participation_in_Forum_Score__c + 
GLC_or_CLW_attendance__c + 
Chapter_represented_at_RBM_past_fiscal_Y__c + 
Chapter_Administrator_attendance_at_CAW__c + 
Current_Annual_Chapter_Strategic_Plan__c + 
Number_Forums_Trained_Moderator_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>18-30 points (inclusive of meeting all 3 minimum chapter standards) = Platinum Chapter, 
9-17 points = Silver Chapter, 
0-8 points = Bronze Chapter</inlineHelpText>
        <label>Health Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_ECODEd_are_Events__c</fullName>
        <inlineHelpText>1 Not at all 
2 A little 
3 Somewhat 
4 Very much so 
5 Strongly 

Consider: 
Uses ECODE framework. If each event seems to have given thought (overall) to each segment of ECODE then 5. If they have only done that with a few, 2/3.</inlineHelpText>
        <label>How ECODEd are Events (1-5)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Dues__c</fullName>
        <label>Initiation Fee (US$)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_CA_Workshop_Attendance__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Chapter Administrator Workshop attendance in past two years</inlineHelpText>
        <label>CAW Attendance in past 2 yrs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Chapter_Ed_Chair_Identified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Removing this field as it has been refactored to be a formula based on Ch ed elect and ch ed current roles being filled</description>
        <inlineHelpText>Chapter Chair and Education Chair identified by 1 July</inlineHelpText>
        <label>Chapter and Ed Chair by 1 Ju (Deprecate)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Chapter_Representation_Regional_Board__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Chapter representation at a Regional Board Meeting in the past year</inlineHelpText>
        <label>Chapter Rep at RBM in the past year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Complete_Network_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Completed a Chapter Network Event in the Current Year</inlineHelpText>
        <label>Completed a Network Event Current Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Current_Strategic_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Current Chapter Strategic Plan Posted on Exchange</inlineHelpText>
        <label>Current Chapter Strategic Plan posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Diversity_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does your Chapter have a Diversity Plan?</inlineHelpText>
        <label>Does your Chapter have a Diversity Plan?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Forum_Policy__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Chapter has a Chapter Forum Policy (check box)</inlineHelpText>
        <label>Chapter has a Chapter Forum Policy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Forum_Transition_Policy__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Chapter has a Chapter Forum Transition Policy (check box)</inlineHelpText>
        <label>Forum Transition Policy Identified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Opt_Out_Prospect_Applications__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Opt-out of receiving YPO prospect applications</inlineHelpText>
        <label>Opt-out of YPO prospect applications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_REX_Visit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Chapter has received visit from Regional Management, Regional Chair, or REX Member in past year</inlineHelpText>
        <label>Chapt Visit-Reg Mgt, RC, REX in Past Yr</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Concerns__c</fullName>
        <label>Key Concerns</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Successes__c</fullName>
        <label>Key Successes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Updated_By__c</fullName>
        <inlineHelpText>Enter your name here.</inlineHelpText>
        <label>Last Updated By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Updated_Date__c</fullName>
        <inlineHelpText>Last Date updated by Education</inlineHelpText>
        <label>Last Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lessons_to_share_to_others__c</fullName>
        <label>Lessons to share to others</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Membership_Limit__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>If your Chapter has no membership limit, leave field blank.</inlineHelpText>
        <label>Maximum Membership Limit</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Member_Participation_in_Forum_Score__c</fullName>
        <formula>IF(Percentage_Members_Forums__c &gt;= (75/100), 3, IF(Percentage_Members_Forums__c &gt;= (60/100), 2,1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>75% to 100% = Platinum, 
60 to 74.9% = Silver, 
59.9% and below = Bronze</inlineHelpText>
        <label>Member Participation in Forum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Member_Participation_in_Network_Event__c</fullName>
        <formula>IF(Number_Primary_Members_Current__c = 0, 0, Members_Participate_in_Network_Event__c / Number_Primary_Members_Current__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Member Participation in Network Event</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Members_Participate_in_Network_Event__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of Chapter Members Participating in Network Events</inlineHelpText>
        <label># Members Participate in Network Event</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Members_Prev_FY_Over_50__c</fullName>
        <description>Total members at the end of the previous fiscal year who were 50 years old or more on 30 June.</description>
        <label>Members Prev FY - Over 50</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Members_Prev_FY_Under_50__c</fullName>
        <description>Total members at the end of the previous fiscal year who were less than 50 years old on 30 June.</description>
        <label>Members Prev FY - Under 50</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Members_attended_Forum_Moderator_Dev__c</fullName>
        <formula>Number_of_Forums__c/ Number_of_Members__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Members attended Forum Moderator Dev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Members_with_a_Complete_Profile__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Percentage of Members with a &quot;Complete&quot; Profile (8 of 12 factors)</inlineHelpText>
        <label>% Members with a Complete Profile</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Membership_Limit_Green__c</fullName>
        <defaultValue>65</defaultValue>
        <description>Total Number of Members</description>
        <inlineHelpText>Total Number of Members</inlineHelpText>
        <label>Membership Limit Green</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Membership_Limit_Red__c</fullName>
        <defaultValue>50</defaultValue>
        <description>Total Number of Members</description>
        <inlineHelpText>Total Number of Members</inlineHelpText>
        <label>Membership Limit Red</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Membership_Limit_Yellow__c</fullName>
        <defaultValue>50</defaultValue>
        <description>Total Number of Members</description>
        <inlineHelpText>Total Number of Members</inlineHelpText>
        <label>Membership Limit Yellow</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Membership_Rating__c</fullName>
        <formula>IF ( Membership__c &lt;&gt; 0, 
IF( 
Membership_Limit_Green__c &gt; 0, 

IF( 
Membership__c &gt;= Membership_Limit_Green__c , IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;green&quot;), 
IF( Membership__c &gt;= Membership_Limit_Yellow__c , IMAGE(&quot;/img/samples/light_yellow.gif&quot;, &quot;yellow&quot;), 
IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;red&quot;))) 
, 

IF( 
Membership__c &gt;= Region2__r.Membership_Limit__c , IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;green&quot;), 
IF( Membership__c &gt;= Region2__r.Membership_Limit_Yellow__c , IMAGE(&quot;/img/samples/light_yellow.gif&quot;, &quot;yellow&quot;),IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;red&quot;)))),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Membership rating based on Regional Limits. If it is less than the yellow limit, it is red. If less than green, it is yellow. Greater than green limit, it is green.</inlineHelpText>
        <label>Membership Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Membership</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Award_Date__c</fullName>
        <inlineHelpText>Derived from the Awards received.</inlineHelpText>
        <label>Most Recent Award Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NMV_Vouchers_Used__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is populated by chapter health batch and utilized in calculating the percentage of New member vouchers formula field.</description>
        <label>NMV Vouchers Used</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Member_GOAL_for_current_fiscal_year__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>New Member GOAL for current fiscal year</inlineHelpText>
        <label>New Member GOAL for current fiscal year</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>(indicate date of call or meeting)</inlineHelpText>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nu_of_Member_Children_Registered_for_YNG__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of Members Children who have registered for YNG+</inlineHelpText>
        <label># of Member Children Registered for YNG+</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Members_Prev_FY__c</fullName>
        <label>Num Members Prev FY</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Spouse_Partners_w_Complete_Profile__c</fullName>
        <label># Spouse/Partners w/Complete Profile</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_Mem_Forums_w_mod_trained_in_3_yrs__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of Member Forums with a moderator who has been trained in the past 3 years</inlineHelpText>
        <label>Num of Mem Forums w/mod trained in 3 yrs</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_spouse_partners_not_secondary_mem__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of spouse/partners (excluding secondary members)</inlineHelpText>
        <label>Num of spouse/partners not secondary mem</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Can_Graduate_June_30__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of members eligible to graduate on 30 June</inlineHelpText>
        <label>Members eligible to graduate-30 June</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Chapter_Officers__c</fullName>
        <label>Number of Chapter Officers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Children_Under_30__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of children (age 29 &amp; under)</inlineHelpText>
        <label># of children (age 29 &amp; under)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Forum_Fundamentals_Attendees__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of members who have attended a Forum Fundamentals program since 1 July (enter zero for YPO Gold Chapters unless this applies)</inlineHelpText>
        <label># Members attended FF since 1 July</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Forum_Fundamentals_Spouses__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of Spouse/Partners who have attended a Forum Fundamentals program since 1 July  (enter zero for YPO Gold Chapters unless this applies)</inlineHelpText>
        <label># S/Ps attended FF since 1 July</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Forum_Fundamentals_Workshops__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of Forum Fundamentals workshops held since 1 July (enter zero for YPO Gold Chapters unless this applies)</inlineHelpText>
        <label># of FF workshops since 1 July</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Forum_Members_in_6_Months__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of new members placed in Forum within 6 months of joining YPO</inlineHelpText>
        <label>New members in Forum (within 6 months)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Forum_Mod_Dev_Attendees__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Since July 1st</inlineHelpText>
        <label>Number Forum Mod. Dev. Attendees</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Forum_Mod_Dev_Spouses__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of Spouse/Partners with a moderator who has been trained in a FMLD program</inlineHelpText>
        <label># S/P Forums w/ FMLD trained moderator</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Forum_Mod_Dev_Workshops__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of Forum Moderator &amp; Leadership Development (FMLD) workshops held since 1 July</inlineHelpText>
        <label># of FMLD workshops since 1 July</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Forum_Spouses_in_6_Months__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of new spouses/partners placed in a forum within 6 months of joining YPO.</inlineHelpText>
        <label>New S/P in Forum (within 6 months)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Forums_Trained_Moderator_Score__c</fullName>
        <formula>IF(Number_Member_Forums__c = 0, 0,
   IF(Number_Forums_Trained_Moderator__c / Number_Member_Forums__c &gt;= 0.75, 3, 
      IF(Number_Forums_Trained_Moderator__c / Number_Member_Forums__c &gt;= 0.60, 2, 1)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Forums with an FMLD trained moderator.
75% to 100% = Platinum, 
60 to 74.9% = Silver, 
59.9% and below = Bronze</inlineHelpText>
        <label>Number Forums w/ Trained Moderator Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Forums_Trained_Moderator__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of Member Forums with a moderator who has been trained in a FMLD program</inlineHelpText>
        <label># Forums w/ FMLD trained moderator</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Incoming_Officers__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of chapter officer-elects identified</inlineHelpText>
        <label># of Chapter Elect Officers</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Member_Forums__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of Member Forums</inlineHelpText>
        <label># of Member Forums</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Members_Grace_Period__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of members on Grace Period</inlineHelpText>
        <label># of members on Grace Period</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_New_Members_Since_July_1__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of new members since 1 July (new to the chapter and/or to the organization)</inlineHelpText>
        <label># of new members since 1 July</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_New_Spouses_Since_July_1__c</fullName>
        <defaultValue>0</defaultValue>
        <label># of new spouse/partners-1 July</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Participants_YPO_WPO_Events__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of Members attending non-chapter YPO Events</inlineHelpText>
        <label># of Members attending YPO Event</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Pri_Sec_Members__c</fullName>
        <formula>Number_Primary_Members_Current__c + Number_Secondary_Members_Current__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number Pri/Sec Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Primary_Members_Current__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Current Number of Primary Members</inlineHelpText>
        <label>Current # of Primary Members</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Primary_Members_June_30__c</fullName>
        <defaultValue>0</defaultValue>
        <label># of primary members 30 June</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Resignations_Involuntary__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of Involuntary Resignations for current fiscal year</inlineHelpText>
        <label># of involuntary resignations current FY</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Resignations_Voluntary__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of Voluntary Resignations for current fiscal year</inlineHelpText>
        <label># of voluntary resignations current FY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_S_P_with_Access_to_Exchange__c</fullName>
        <label>Number S/P with Access to Exchange</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Secondary_Members_Current__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Current Number of Secondary members</inlineHelpText>
        <label>Current # of Secondary members</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Secondary_Members_June_30__c</fullName>
        <defaultValue>0</defaultValue>
        <label># of secondary members 30 June</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Spouse_Partner_Forums__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of Spouse/Partner Forums</inlineHelpText>
        <label># of Spouse/Partner Forums</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Spouse_Partners__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of spouse/partners (excluding secondary members&apos; - Spouse/Partners)</inlineHelpText>
        <label># of spouse/partners</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Trained_Officers__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of current Chapter Officers trained at GLC or Regional Training</inlineHelpText>
        <label># Chapter Officers trained at GLC/CLW</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_YPO_Cross_Chapter_Events__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of Cross-Chapter Events (not YPO-YPO Gold joint events)</inlineHelpText>
        <label># of Cross-Chapter Events</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_YPO_Mentors__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of chapter members involved in Mentoring</inlineHelpText>
        <label># of members involved in Mentoring</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_YPO_WPO_Events__c</fullName>
        <defaultValue>0</defaultValue>
        <label># of joint YPO-YPO Gold chapter events</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Completed_M2Mx_Profiles__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Count of chapter members who have an M2MX profile completed</description>
        <label>Number of Completed M2Mx Profiles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>